# norot

./: Cargo.toml  README.md  config.toml  educational_content.html  test_content.html  test_norot.sh
data/: norot.db
src/: classifier.rs  config.rs  db.rs  filter.rs  main.rs  proxy.rs  ui.rs
static/: script.js  style.css
templates/: dashboard.html
